Move arm-thumb feature to buildtools
Share arm-thumb setting between pdf and webengine.
Move webengine-embedded to webengine since it is not used
by pdf.

Change-Id: Id23888423af7a37a3b3aa06e40dc0359fb90724b
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -344,6 +344,10 @@
         "webengine-nowhitespace" : {
             "label": "build path without whitespace",
             "type": "detectNoWhitespace"
+        },
+        "webengine-arm-thumb" : {
+            "label": "thumb instruction set",
+            "type": "hasThumbFlag"
         }
     },
     "features": {
@@ -649,6 +653,11 @@
                 "privateFeature",
                 { "type": "varAssign", "name": "PLATFORM_ERROR", "value": "tests.webengine-platform-support.platformSupport" }
             ]
+        },
+        "webengine-arm-thumb": {
+            "label": "Thumb instruction set",
+            "condition": "config.linux && arch.arm && tests.webengine-arm-thumb",
+            "output": [ "privateFeature" ]
         }
     },
     "report": [
