Do not build on qnx
It seems that coin on qt5 merge tries to build qtpdf on qnx

Change-Id: Ife42dbf0484b1f0151e9c487467898c5c2567c4a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -383,7 +383,8 @@
         },
         "webengine-qtpdf-support": {
             "label": "Support Qt Pdf",
-            "condition": "module.gui
+            "condition": "(config.linux || config.win32 || config.macos)
+                         && module.gui
                          && features.webengine-submodule
                          && features.webengine-nowhitespace
                          && !features.webengine-no-platform-support
