Add API for favicon database
[ChangeLog][QtWebEngineCore][QWebEngineProfile] Add new API
to access icon database asynchronously.
[ChangeLog][QtWebEngineQuick] image:/favicon/ URLs now can be used to access
icon database.

Pick-to: 6.2
Task-number: QTBUG-51184
Change-Id: I6096ad9a4210670ed59458c4fa099a02595e8a1e
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/quick/qmltests/CMakeLists.txt
+++ b/tests/auto/quick/qmltests/CMakeLists.txt
@@ -18,6 +18,7 @@ set(testList
     tst_desktopBehaviorLoadHtml.qml
     tst_download.qml
     tst_favicon.qml
+    tst_faviconDatabase.qml
     tst_filePicker.qml
     tst_findText.qml
     tst_focusOnNavigation.qml
