--- a/tests/auto/widgets/CMakeLists.txt
+++ b/tests/auto/widgets/CMakeLists.txt
@@ -5,7 +5,7 @@ if(NOT boot2qt)
     add_subdirectory(qwebengineprofile)
     add_subdirectory(qwebengineview)
 endif()
-add_subdirectory(faviconmanager)
+add_subdirectory(favicon)
 add_subdirectory(loadsignals)
 add_subdirectory(origins)
 add_subdirectory(proxy)
