--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -1,6 +1,6 @@
 dependencies:
   ../qtdeclarative:
-    ref: b2f8d680d65b987ab88c41a2f76e6becbad62864
+    ref: 8a19c2c64dcc07221d4d4a88782d51cb2ec93995
     required: true
 #  ../qtlocation:
 #    ref: a8793c6d9695498b3a53793f21859421262b4541
@@ -8,12 +8,12 @@ dependencies:
 #  ../qtquickcontrols:
 #    ref: 59749d56d666a6687fcedc2f7892080467db8574
 #    required: false
-  ../qtquickcontrols2:
-    ref: dd90f7be501a9545e74aaecacba1d469a8fad5aa
-    required: false
+#  ../qtquickcontrols2:
+#    ref: dd90f7be501a9545e74aaecacba1d469a8fad5aa
+#    required: false
   ../qttools:
-    ref: c21ea2f13eae86958caf7e80a60a74fe182aaa7e
+    ref: e14abcec169cf263e8c58c59e751928c1fddb34d
     required: false
-  ../qtwebchannel:
-    ref: 8554d71f47f85b111f095ea8f25c3a72c5cae32e
-    required: false
+#  ../qtwebchannel:
+#    ref: 8554d71f47f85b111f095ea8f25c3a72c5cae32e
+#    required: false
