--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -25,6 +25,7 @@
             "webengine-native-spellchecker": "boolean",
             "webengine-extensions": "boolean",
             "webengine-webrtc": "boolean",
+            "webengine-webrtc-pipewire": "boolean",
             "webengine-geolocation": "boolean",
             "webengine-webchannel": "boolean",
             "webengine-kerberos": "boolean",
@@ -66,6 +67,12 @@
             "label": "pulseaudio >= 0.9.10",
             "sources": [
                 { "type": "pkgConfig", "args": "libpulse >= 0.9.10 libpulse-mainloop-glib" }
+            ]
+        },
+        "webengine-gio": {
+            "label": "gio",
+            "sources": [
+                { "type": "pkgConfig", "args": "gio-2.0" }
             ]
         }
     },
@@ -183,6 +190,13 @@
             "autoDetect": "!features.webengine-embedded-build",
             "output": [ "privateFeature" ]
         },
+        "webengine-webrtc-pipewire": {
+            "label": "PipeWire over GIO",
+            "purpose": "Provides PipeWire support in WebRTC using GIO.",
+            "condition": "features.webengine-webrtc && libs.webengine-gio",
+            "autoDetect": "false",
+            "output": [ "privateFeature" ]
+        },
         "webengine-ozone" : {
              "label": "Support qpa-xcb",
              "condition": "features.webengine-ozone-x11",
@@ -252,6 +266,7 @@
                 "webengine-spellchecker",
                 "webengine-native-spellchecker",
                 "webengine-webrtc",
+                "webengine-webrtc-pipewire",
                 "webengine-geolocation",
                 "webengine-webchannel",
                 "webengine-kerberos",
