Fix platform support for qtpdf on ios
Add missing check for ios.

Change-Id: I7fce6addb154ea83b8308094d5a6c4275d050d9b
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -383,7 +383,7 @@
         },
         "webengine-qtpdf-support": {
             "label": "Support Qt Pdf",
-            "condition": "(config.linux || config.win32 || config.macos)
+            "condition": "(config.linux || config.win32 || config.macos || config.ios)
                          && module.gui
                          && features.webengine-submodule
                          && features.webengine-nowhitespace
