Move webengine-noexecstack to buildtools
Change-Id: I854034fd63c8847867fd7ec01d5c25781e7de5ef
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -352,6 +352,11 @@
         "webengine-sanitizer": {
             "label" : "sanitizer support",
             "type": "isSanitizerSupported"
+        },
+        "webengine-noexecstack" : {
+            "label": "linker supports -z noexecstack",
+            "type": "linkerSupportsFlag",
+            "flag": "-z,noexecstack"
         }
     },
     "features": {
@@ -670,6 +675,11 @@
             "label": "Sanitizer",
             "autoDetect": "config.sanitizer && tests.webengine-sanitizer",
             "condition": "config.sanitizer",
+            "output": [ "privateFeature" ]
+        },
+        "webengine-noexecstack": {
+            "label": "linker supports -z noexecstack",
+            "condition": "config.unix && tests.webengine-noexecstack",
             "output": [ "privateFeature" ]
         }
     },
