Update dependencies on 'dev' in qtwebengine
Temporarily disable qttools and qtwebchannel dependencies
as qtquickcontrols2 is 3 commits ahead in its qtdeclarative
dependency.

Change-Id: Ic2a1b472300e1fa1545f5d553e4b909c07c88ba9
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -1,6 +1,6 @@
 dependencies:
   ../qtdeclarative:
-    ref: 08dbc9940bcb4d139313f03f2aec5a1cbccdbfd3
+    ref: 3baa87d0697368aea1a236b47c9971071a7b33ae
     required: true
 #  ../qtlocation:
 #    ref: a8793c6d9695498b3a53793f21859421262b4541
@@ -9,11 +9,11 @@ dependencies:
 #    ref: 59749d56d666a6687fcedc2f7892080467db8574
 #    required: false
   ../qtquickcontrols2:
-    ref: 2ff6d3a112d802f0d69e359a23e09e5d645eeca7
+    ref: 0ba45442f3f1102af73ec2666e4e5c24ed516331
     required: false
-  ../qttools:
-    ref: 83a1f50e2cb6e82346b72769df08ba1b046a6e3c
-    required: false
-  ../qtwebchannel:
-    ref: 6ff8dbcdf3e68315b76b82eb32561282f2a70147
-    required: false
+#  ../qttools:
+#    ref: af64f2f8ab11088a71b0e153df60ddae361b1a3a
+#    required: false
+#  ../qtwebchannel:
+#    ref: a1d717d881f6f1e72cf2643826b6025c1d16d7f6
+#    required: false
