Add missing QtPdf framework for installer
Speculative fix.

Task-number: QTBUG-86972
Change-Id: Idc69b472439e602dc6db5dfa8fc67606b9abde08
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>

--- a/coin/qt-installer-package-config.json
+++ b/coin/qt-installer-package-config.json
@@ -9,6 +9,7 @@
             "**/lib/pkgconfig/Qt5Pdf*",
             "**/lib/libQt5Pdf*",
             "**/lib/static_chrome/*",
+            "**/lib/QtPdf.framework/*"
             "**/mkspecs/modules/qt_lib_pdf*",
             "**/plugins/imageformats/*",
             "**/qml/QtQuick/**/*"
