--- a/coin/qt-installer-package-config.json
+++ b/coin/qt-installer-package-config.json
@@ -11,6 +11,7 @@
             "**/lib/static_chrome/*",
             "**/lib/QtPdf.framework/*"
             "**/mkspecs/modules/qt_lib_pdf*",
+            "**/mkspecs/modules/qt_plugin_qpdf.pri",
             "**/plugins/imageformats/*",
             "**/qml/QtQuick/**/*"
         ]
