--- a/coin/qt-installer-package-config.json
+++ b/coin/qt-installer-package-config.json
@@ -9,7 +9,7 @@
             "**/lib/pkgconfig/Qt5Pdf*",
             "**/lib/libQt5Pdf*",
             "**/lib/static_chrome/*",
-            "**/lib/QtPdf.framework/*"
+            "**/lib/QtPdf.framework/*",
             "**/mkspecs/modules/qt_lib_pdf*",
             "**/mkspecs/modules/qt_plugin_qpdf.pri",
             "**/plugins/imageformats/*",
