Enable chrome://user-actions WebUI
Also record some actions in WebContentsAdapter. The list is far from
complete but these seemed obvious.

Change-Id: I7dcddeef416efd6fb26618381a83d2b132b98d83
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -85,6 +85,10 @@ source_set("qtwebengine_sources") {
     "//chrome/browser/ui/webui/quota_internals/quota_internals_types.h",
     "//chrome/browser/ui/webui/quota_internals/quota_internals_ui.cc",
     "//chrome/browser/ui/webui/quota_internals/quota_internals_ui.h",
+    "//chrome/browser/ui/webui/user_actions/user_actions_ui.cc",
+    "//chrome/browser/ui/webui/user_actions/user_actions_ui.h",
+    "//chrome/browser/ui/webui/user_actions/user_actions_ui_handler.cc",
+    "//chrome/browser/ui/webui/user_actions/user_actions_ui_handler.h",
     "//chrome/common/custom_handlers/protocol_handler.cc",
     "//chrome/common/custom_handlers/protocol_handler.h",
     "//chrome/common/chrome_switches.cc",
