Add BUILD.gn generation for the gn root and gn toolchain
Use simple templates. This will get own target
in followup changes.

Task-number: QTBUG-91760
Change-Id: I0b6991f7b54183aa9fb667cec5ad347f66c78b99
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ qt_feature_module_begin(ONLY_EVALUATE_FEATURES)
 # to work in spite of ONLY_EVALUATE_FEATURES.
 set(__QtFeature_only_evaluate_features OFF)
 include(configure.cmake)
+include(src/core/api/configure.cmake)
 qt_feature_module_end(ONLY_EVALUATE_FEATURES)
 qt_build_repo_end()
 
