Add WebEngineWidgets, WebEngineQuick modules cmake build
Fix some library dependencies and make proper header includes
in core.

Task-number: QTBUG-91760
Change-Id: I415361dd42ef2cc39716ce3f5f56e6e8556ac4c8
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,8 @@ endif()
 
 add_subdirectory(src/core/api)
 add_subdirectory(src/process)
+add_subdirectory(src/webenginewidgets)
+add_subdirectory(src/webenginequick)
 qt_build_repo_end()
 
 ### NINJA
